# chatgpt-gateway

./: .gitignore  README.md  background.js  content.js  manifest.firefox.json  manifest.json  package-lock.json  package.json  popup.html  popup.js  server.mjs
camoufox-gateway/: .gitignore  README.md  accounts.example.json  pyproject.toml
camoufox-gateway/skills/chatgpt-pro/: SKILL.md
camoufox-gateway/src/cgw/: __init__.py  browser.py  chat.py  cli.py  client.py  config.py  daemon.py  login.py  mcp_server.py  probe.py
camoufox-gateway/systemd/: cgw-gateway.service  cgw-gateway@.service
camoufox-gateway/tests/: test_effort_match.py
mcp/: index.mjs  package-lock.json  package.json
