[project]
name = "cgw"
version = "0.1.0"
description = "Camoufox ChatGPT-Pro gateway — smooth extended-thinking access via a persistent stealth browser, exposed as a local daemon + MCP server"
requires-python = ">=3.11"
dependencies = [
    "camoufox[geoip]>=0.4.11",
    "aiohttp>=3.9",
    "mcp>=1.2",
]

[project.scripts]
cgw = "cgw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cgw"]
